Add Composer component information

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,12 @@
   ],
   "require": {
     "robloach/component-installer": "*"
+  },
+  "extra": {
+    "component": {
+      "scripts": [
+        "dist/html5shiv.js"
+      ]
+    }
   }
 }
