Updated bower.json `ignore` files

--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,11 @@
   ],
   "ignore": [
     "**/.*",
+    "bower.json",
     "composer.json",
-    "test",
-    "build",
+    "Gruntfile.js",
+    "package.json",
     "src",
-    "build.xml"
+    "test"
   ]
 }
