Adjust the `composer.json` file
Use the minified version in the `scripts` section and copy all `dist/.js` files in case someone wants to use the `-printshiv.js` file as well.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
   "extra": {
     "component": {
       "scripts": [
-        "dist/html5shiv.js"
+        "dist/html5shiv.min.js"
+      ],
+      "files": [
+        "dist/*.js"
       ]
     }
   }
