--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "dist/html5shiv.min.js"
       ],
       "files": [
-        "dist/*.js"
+        "dist/html5shiv-printshiv.min.js"
       ]
     }
   }
