add commonjs support + fix main property in package.json (see #178)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"type": "git",
 		"url": "https://github.com/aFarkas/html5shiv.git"
 	},
-	"main": "dist/",
+	"main": "dist/html5shiv.js",
 	"devDependencies": {
 		"grunt-bytesize": ">=0.1.0",
 		"grunt-contrib-watch": ">=0.3.0",
