--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,13 @@
 {
-  "name": "afarkas/html5shiv",
-  "description": "Defacto way to enable use of HTML5 sectioning elements in legacy Internet Explorer.",
-  "type": "component",
-  "homepage": "http://paulirish.com/2011/the-history-of-the-html5-shiv/",
-  "license": [
-    "MIT",
-    "GPL-2.0"
-  ],
-  "extra": {
-    "component": {
-      "scripts": [
-        "dist/html5shiv.js"
-      ]
-    }
-  }
+    "name": "afarkas/html5shiv",
+    "description": "Defacto way to enable use of HTML5 sectioning elements in legacy Internet Explorer.",
+    "type": "component",
+    "homepage": "http://paulirish.com/2011/the-history-of-the-html5-shiv/",
+    "license": [
+        "MIT",
+        "GPL-2.0"
+    ],
+    "require": {
+        "twbs/bootstrap": "^3.3"
+     }
 }
